--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             </div>
           </div>
         </div>
-        <div class="position-absolute bottom-0 start-50 translate-middle-x w-100 pb-4">
+        <div class="position-absolute bottom-0 start-50 translate-middle-x w-100 pb-5">
           <div class="container">
-            <div class="row justify-content-end">
-              <div class="col-md-4 col-12 text-md-end text-center mb-md-5 pb-md-4">
-                <small class="d-block lh-sm text-light">
+            <div class="row justify-content-center justify-content-md-end">
+              <div class="col-md-4 col-10 text-md-end text-center mb-md-5 pb-md-4">
+                <div class="small d-block lh-sm text-light">
                   This webpage lets you explore NASA’s Astronomy Picture of the Day from the moment you were born.
                   You can also discover cosmic images from your birthday week.
-                </small>
+                </div>
               </div>
             </div>
           </div>
@@ -76,10 +76,25 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid mt-auto py-3 text-dark" style="background-color: #D35C41;">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center text-light">
+          <div class="h6 fw-bold mb-1">Your Birthday in Space: A NASA APOD Viewer</div>
+          <div class="small">
+            Disclaimer: All images, videos, and information featured on this website are sourced from NASA via its
+            official APIs. This project does not claim ownership of any content; all rights remain with their respective
+            owners.
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
