add note for late image update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
+
 <body data-bs-theme="dark">
   <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-blurred bg-opacity-75 fixed-top py-3 ">
@@ -28,12 +29,13 @@
           <div class="navbar-nav ms-auto text-end justify-content-end gap-3 w-100 px-3">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link " href="#APOD">APOD</a>
-            <a class="nav-link " href="#birthdayForm">Birthday Picture</a>
+            <a class="nav-link " href="#birthdayForm">Birthday Photo</a>
           </div>
         </div>
       </div>
     </nav>
   </div>
+
 
   <div class="container-fluid p-0 position-relative">
     <div class="row m-0">
@@ -84,6 +86,10 @@
           Astronomy Picture of the Day
         </div>
         <div class="fst-italic section-subtitle" id="todayDate"></div>
+        <div class="small fst-italic opacity-75 mt-1">
+         NASA’s Astronomy Picture of the Day follows U.S. Eastern Time, image updates may appear later in Philippine time.
+        </div>
+
       </div>
     </div>
     <div class="row justify-content-center gy-4 px-lg-5">
